# Django_taskmanagement

./: app.py  database.py  db.sqlite  models.py  pyproject.toml
task_management/: db.sqlite3
task_management/core/: admin.py  models.py  serializers.py  tests.py  views.py
task_management/core/migrations/: 0001_initial.py
task_management/task_management/: settings.py  urls.py
templates/: base.html
